# explainable-fraud-investigation-platform

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements-app.txt  requirements-frontend.txt  requirements-llm.txt  requirements-lock.txt  requirements-xai.txt  requirements.txt
api/: __init__.py  config.py  main.py  schemas.py  utils.py
api/services/: __init__.py  investigation_service.py  metrics_service.py  model_service.py  xai_service.py
examples/: sample_merged_transactions.csv
frontend/: api_client.py  streamlit_app.py
models/investigation/: tfidf_vectorizer.joblib
models/preprocessing/: correlated_features_removed.pkl  encoded_feature_names.pkl  frequency_maps.pkl  high_cardinality_features.pkl  high_missing_features.pkl  (+11 more)
notebooks/: 01_EDA_Business_Understanding.ipynb  01_Exploratory_Data_Analysis_Business_Understanding.ipynb  02_Data_Preprocessing_Feature_Engineering.ipynb  02_Data_Wrangling_Preprocessing_Feature_Engineering.ipynb  03_ML_Model_Selection_Tuning_Evaluation.ipynb  03_Model_Development_Comparison.ipynb  03_model_selection_and_evaluation.ipynb  04_Fraud_Investigation_AI_Assistant.ipynb  04_Post_Hoc_XAI_SHAP_LIME.ipynb  04_post_hoc_explainability.ipynb  05_XAI_Model_Explanations.ipynb
reports/: 04_fraud_investigation_ai_assistant_report.md  04_post_hoc_xai_shap_lime_report.md  05_xai_model_explanations_report.md
scripts/: create_example_score_csv.py
src/: __init__.py  fraud_pipeline.py
tests/: test_api.py  test_api_client.py  test_fraud_pipeline.py
(+28 files in other folders)
