[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "explainable-fraud-investigation-platform"
version = "0.1.0"
description = "An explainable machine-learning platform for fraud detection and evidence-based human investigation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Antonio Sosa" },
]
dependencies = [
    # Data and machine learning
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<4.0",
    "pyarrow>=17.0,<26.0",
    "scipy>=1.14,<2.0",
    "scikit-learn>=1.5,<2.0",
    "xgboost>=2.1,<4.0",
    "joblib>=1.4,<2.0",

    # Visualization and explainability
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "shap>=0.50,<0.52",
    "lime>=0.2.0.1,<0.3",

    # FastAPI backend and Streamlit frontend
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
    "requests>=2.32,<3.0",
    "streamlit>=1.45,<2.0",

    # Notebook environment
    "jupyter>=1.1,<2.0",
    "ipykernel>=6.29,<8.0",
]

[project.urls]
Repository = "https://github.com/antonsoss/explainable-fraud-investigation-platform"
Dataset = "https://www.kaggle.com/competitions/ieee-fraud-detection"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "frontend*", "src*"]
exclude = ["tests*"]
